--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,9 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
       - run:
+          name: Build
+          command: yarn build
+      - run:
           name: Test
           command: yarn workspace apollo-angular test
       - run:
@@ -42,6 +45,9 @@ jobs:
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
+      - run:
+          name: Build
+          command: yarn build
       - run:
           name: Test
           command: yarn workspace apollo-angular-boost test
@@ -59,6 +65,9 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
       - run:
+          name: Build
+          command: yarn build
+      - run:
           name: Test
           command: yarn workspace apollo-angular-cache-ngrx test
       - run:
@@ -74,6 +83,9 @@ jobs:
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
+      - run:
+          name: Build
+          command: yarn build
       - run:
           name: Test
           command: yarn workspace apollo-angular-link-headers test
@@ -91,6 +103,9 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
       - run:
+          name: Build
+          command: yarn build
+      - run:
           name: Test
           command: yarn yarn workspace apollo-angular-link-http test
       - run:
@@ -106,6 +121,9 @@ jobs:
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
+      - run:
+          name: Build
+          command: yarn build
       - run:
           name: Test
           command: yarn workspace apollo-angular-link-http-batch test
@@ -123,6 +141,9 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
       - run:
+          name: Build
+          command: yarn build
+      - run:
           name: Test
           command: yarn workspace apollo-angular-link-http-common test
       - run:
@@ -139,8 +160,11 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
       - run:
-        name: Test
-        command: yarn workspace apollo-angular-link-persisted test
+          name: Build
+          command: yarn build
+      - run:
+          name: Test
+          command: yarn workspace apollo-angular-link-persisted test
       - run:
           name: Lint
           command: yarn workspace apollo-angular-link-persisted lint
