build: update lerna to 3.0.1

--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
+  "name": "apollo-angular-monorepo",
   "private": true,
   "license": "MIT",
   "scripts": {
     "postinstall": "node ./scripts/netlify-check.js 'yarn build'",
     "prebuild": "rimraf packages/*/build/ packages/*/coverage/",
-    "build": "lerna run -- build",
-    "test": "lerna run -- test",
+    "build": "lerna run build",
+    "test": "lerna run test",
     "prelint": "yarn prettier",
-    "lint": "lerna run -- lint",
+    "lint": "lerna run lint",
     "prettier": "prettier --config .prettierrc --write \"packages/*/{src,tests}/**/*.ts\"",
-    "deploy": "lerna run -- deploy",
+    "deploy": "lerna run deploy",
     "coverage": "codecov",
     "precommit": "lint-staged",
     "commitmsg": "commitlint -e"
@@ -24,7 +25,7 @@
     "codecov": "3.0.4",
     "husky": "0.14.3",
     "jest": "23.4.2",
-    "lerna": "2.11.0",
+    "lerna": "3.0.1",
     "lint-staged": "7.2.0",
     "prettier": "1.14.2",
     "rimraf": "2.6.2",
