build: NgZone instead of Zone, ng-packagr and no tslint

--- a/packages/apollo-angular/tsconfig.json
+++ b/packages/apollo-angular/tsconfig.json
@@ -7,7 +7,6 @@
   },
   "include": [
     "src/**/*.ts",
-    "tests/**/*.ts",
-    "../../node_modules/zone.js/dist/zone.js.d.ts"
+    "tests/**/*.ts"
   ]
 }
