--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "prebuild": "rimraf packages/*/build/ packages/*/coverage/",
     "build": "lerna run build",
     "test": "lerna run test",
-    "prelint": "yarn prettier",
-    "lint": "lerna run lint",
-    "prettier": "prettier --config .prettierrc --write \"packages/*/{src,tests}/**/*.ts\"",
+    "format": "prettier --config .prettierrc --write \"packages/**/{src,tests}/**/*.ts\"",
     "deploy": "lerna run deploy",
     "coverage": "codecov",
     "precommit": "lint-staged",
@@ -29,9 +27,7 @@
     "lint-staged": "7.2.2",
     "prettier": "1.14.2",
     "rimraf": "2.6.2",
-    "rollup": "0.64.1",
     "shelljs": "0.8.2",
-    "tslint": "5.11.0",
     "typescript": "2.9.2"
   }
 }
