--- a/packages/apollo-angular-link-headers/package.json
+++ b/packages/apollo-angular-link-headers/package.json
@@ -4,23 +4,18 @@
   "author": "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
   "sideEffects": false,
-  "main": "./build/bundle.umd.js",
-  "module": "./build/src/index.js",
-  "jsnext:main": "./build/src/index.js",
-  "typings": "./build/src/index.d.ts",
+  "main": "build/bundles/ng.apolloLink.headers.umd.js",
+  "module": "build/fesm5/ng.apolloLink.headers.js",
+  "typings": "build/ng.apolloLink.headers.d.ts",
   "version": "1.1.0",
   "repository": {
     "type": "git",
     "url": "apollographql/apollo-angular"
   },
   "scripts": {
-    "build": "./node_modules/.bin/tsc -p tsconfig.build.json",
-    "bundle": "rollup -c rollup.config.js",
+    "build": "ng-packagr -p ng-package.js",
     "test": "yarn test-only",
-    "test-only": "jest --config jest.config.js",
-    "lint": "tslint -c ../../tslint.json -p tsconfig.json {src,tests}/*.ts",
-    "postbuild": "yarn bundle",
-    "deploy": "../../scripts/deploy.sh"
+    "test-only": "jest --config jest.config.js"
   },
   "peerDependencies": {
     "@angular/common": "^6.0.0",
@@ -35,7 +30,7 @@
     "graphql": "0.13.2",
     "graphql-tag": "2.9.2",
     "jest": "23.5.0",
-    "rollup": "0.64.1",
+    "ng-packagr": "4.1.0",
     "ts-jest": "23.1.3",
     "typescript": "2.9.2"
   }
