--- a/packages/apollo-angular-cache-ngrx/package.json
+++ b/packages/apollo-angular-cache-ngrx/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "ng-packagr -p ng-package.js",
     "test": "yarn test-only",
-    "test-only": "jest --config jest.config.js",
+    "test-only": "jest --config jest.config.js"
   },
   "peerDependencies": {
     "@angular/core": "^6.0.0-rc.0",
