build: add deploy script

--- a/packages/apollo-angular-link-headers/package.json
+++ b/packages/apollo-angular-link-headers/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "build": "ng-packagr -p ng-package.js",
     "test": "yarn test-only",
-    "test-only": "jest --config jest.config.js"
+    "test-only": "jest --config jest.config.js",
+    "deploy": "yarn build && npm publish build"
   },
   "peerDependencies": {
     "@angular/common": "^6.0.0",
