build: remove --canary

--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -19,7 +19,7 @@
     "test-only": "jest --config jest.config.js",
     "test:testing": "jest --config testing/jest.config.js",
     "prebuild": "rm -rf build/",
-    "deploy": "yarn build && npm publish build --tag canary"
+    "deploy": "yarn build && npm publish build"
   },
   "peerDependencies": {
     "@angular/core": "^6.0.0",
