--- a/packages/apollo-angular-boost/package.json
+++ b/packages/apollo-angular-boost/package.json
@@ -3,23 +3,19 @@
   "description": "The easiest way to get started with Apollo Client in Angular",
   "author": "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
-  "main": "./build/bundle.umd.js",
-  "module": "./build/src/index.js",
-  "jsnext:main": "./build/src/index.js",
-  "typings": "./build/src/index.d.ts",
+  "main": "build/bundles/ng.apolloBoost.umd.js",
+  "module": "build/fesm5/ng.apolloBoost.js",
+  "typings": "build/ng.apolloBoost.d.ts",
   "version": "1.0.0-beta.1",
   "repository": {
     "type": "git",
     "url": "apollographql/apollo-angular"
   },
   "scripts": {
-    "build": "./node_modules/.bin/ngc -p tsconfig.build.json",
-    "bundle": "rollup -c rollup.config.js",
+    "build": "ng-packagr -p ng-package.js",
     "test": "yarn test-only",
-    "test-only": "yarn lint && yarn build",
-    "lint": "tslint -c ../../tslint.json -p tsconfig.json --type-check {src,tests}/*.ts",
-    "postbuild": "yarn bundle",
-    "deploy": "../../scripts/deploy.sh"
+    "test-only": "yarn build",
+    "deploy": "yarn build && npm publish build"
   },
   "peerDependencies": {
     "@angular/core": "^6.0.0",
@@ -50,7 +46,7 @@
     "graphql": "0.13.2",
     "jest": "23.5.0",
     "jest-zone-patch": "0.0.8",
-    "rollup": "0.64.1",
+    "ng-packagr": "4.1.0",
     "rxjs": "6.2.2",
     "ts-jest": "23.1.3",
     "typescript": "2.9.2",
