--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -5,29 +5,21 @@
   "author": "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
   "sideEffects": false,
-  "main": "./build/bundle.umd.js",
-  "module": "./build/src/index.js",
-  "jsnext:main": "./build/src/index.js",
-  "typings": "./build/src/index.d.ts",
+  "main": "build/bundles/ng.apollo.umd.js",
+  "module": "build/fesm5/ng.apollo.js",
+  "typings": "build/ng.apollo.d.ts",
   "repository": {
     "type": "git",
     "url": "apollographql/apollo-angular"
   },
   "scripts": {
-    "build": "./node_modules/.bin/ngc -p tsconfig.build.json",
-    "build:testing": "./node_modules/.bin/ngc -p testing/tsconfig.build.json",
-    "bundle": "rollup -c rollup.config.js",
-    "bundle:testing": "rollup -c testing/rollup.config.js",
+    "build": "ng-packagr -p ng-package.js",
     "test": "yarn test-only",
     "posttest": "yarn test:testing",
     "test-only": "jest --config jest.config.js",
     "test:testing": "jest --config testing/jest.config.js",
-    "lint": "tslint -c ../../tslint.json -p tsconfig.json {src,tests}/**/*.ts",
-    "lint:testing": "tslint -c ../../tslint.json -p testing/tsconfig.json testing/{src,tests}/**/*.ts",
-    "postlint": "yarn lint:testing",
-    "postbuild": "yarn bundle && yarn build:testing",
-    "postbuild:testing": "yarn bundle:testing",
-    "deploy": "../../scripts/deploy.sh ./scripts/testing.sh"
+    "prebuild": "rm -rf build/",
+    "deploy": "yarn build && npm publish build"
   },
   "peerDependencies": {
     "@angular/core": "^6.1.0",
@@ -52,7 +44,7 @@
     "graphql-tag": "2.9.2",
     "jest": "23.5.0",
     "jest-zone-patch": "0.0.8",
-    "rollup": "0.64.1",
+    "ng-packagr": "4.1.0",
     "rxjs": "6.2.2",
     "ts-jest": "23.1.3",
     "typescript": "2.9.2",
