--- a/packages/apollo-angular-boost/package.json
+++ b/packages/apollo-angular-boost/package.json
@@ -6,7 +6,7 @@
   "main": "build/bundles/ng.apolloBoost.umd.js",
   "module": "build/fesm5/ng.apolloBoost.js",
   "typings": "build/ng.apolloBoost.d.ts",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.4",
   "repository": {
     "type": "git",
     "url": "apollographql/apollo-angular"
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "ng-packagr -p ng-package.js",
     "test": "yarn test-only",
-    "test-only": "yarn build",
+    "test-only": "jest --config jest.config.js",
     "deploy": "yarn build && npm publish build"
   },
   "peerDependencies": {
