--- a/packages/apollo-angular-link-persisted/package.json
+++ b/packages/apollo-angular-link-persisted/package.json
@@ -7,7 +7,7 @@
   "main": "build/bundles/ng.apolloLink.persisted.umd.js",
   "module": "build/fesm5/ng.apolloLink.persisted.js",
   "typings": "build/ng.apolloLink.persisted.d.ts",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "apollographql/apollo-angular"
