--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,8 +13,10 @@ sidebar_categories:
     - basics/setup
     - basics/queries
     - basics/mutations
+    - basics/services
     - basics/network-layer
     - basics/caching
+    - basics/local-state
   Features:
     - features/error-handling
     - features/caching
@@ -26,6 +28,9 @@ sidebar_categories:
     - features/nativescript
     - features/multiple-clients
     - features/static-typing
+  Guides:
+    - guides/state-management
+    - guides/testing
   Recipes:
     - recipes/simple-example
     - recipes/query-splitting
@@ -36,6 +41,7 @@ sidebar_categories:
     - recipes/webpack
     - recipes/meteor
     - recipes/angular-cli
+    - recipies/boost-migration
 
 github_repo: apollographql/apollo-angular
 content_root: docs/source
