--- a/packages/apollo-angular-link-http-batch/package.json
+++ b/packages/apollo-angular-link-http-batch/package.json
@@ -7,11 +7,16 @@
   "main": "build/bundles/ng.apolloLink.httpBatch.umd.js",
   "module": "build/fesm5/ng.apolloLink.httpBatch.js",
   "typings": "build/ng.apolloLink.httpBatch.d.ts",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "repository": {
     "type": "git",
     "url": "apollographql/apollo-angular"
   },
+  "keywords": [
+    "apollo",
+    "graphql",
+    "angular"
+  ],
   "scripts": {
     "build": "ng-packagr -p ng-package.js",
     "test": "yarn test-only",
@@ -26,7 +31,7 @@
   "dependencies": {
     "apollo-link": "^1.0.0",
     "apollo-link-batch": "^1.1.2",
-    "apollo-angular-link-http-common": "~1.1.0"
+    "apollo-angular-link-http-common": "~1.2.0"
   },
   "devDependencies": {
     "@angular/animations": "6.1.3",
