--- a/packages/apollo-angular/schematics/tsconfig.json
+++ b/packages/apollo-angular/schematics/tsconfig.json
@@ -1,30 +1,15 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "tsconfig",
-    "lib": [
-      "es2017",
-      "dom"
-    ],
-    "declaration": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "noEmitOnError": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "noUnusedParameters": false,
-    "noUnusedLocals": false,
+    "outDir": "../build/schematics",
+    "baseUrl": ".",
+    "rootDir": ".",
     "skipDefaultLibCheck": true,
     "skipLibCheck": true,
-    "sourceMap": true,
-    "strictNullChecks": true,
-    "target": "es6",
-    "types": [
-      "jasmine",
-      "node"
-    ]
+    "target": "es6"
   },
-  "exclude": [
-    "*/files/**/*"
-  ]
+  "files": [
+    "install/index.ts"
+  ],
+  "include": []
 }
