--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -15,16 +15,18 @@
   "keywords": [
     "apollo",
     "graphql",
-    "angular"
+    "angular",
+    "schematics",
+    "angular-schematics"
   ],
   "scripts": {
-    "build": "ng-packagr -p ng-package.js && npm run build-schematics",
-    "build-schematics": "tsc -p schematics/tsconfig.json && cp schematics/ build/ -r",
+    "build": "ng-packagr -p ng-package.js && yarn build:schematics",
+    "build:schematics": "tsc -p schematics/tsconfig.json && node ./scripts/move-schematics.js",
     "test": "yarn test-only",
-    "posttest": "yarn test:testing",
+    "posttest": "yarn test:testing && yarn test:schematics",
     "test-only": "jest --config jest.config.js",
     "test:testing": "jest --config testing/jest.config.js",
-    "test-schematics": "jasmine --config=jasmine-config/jasmine.json",
+    "test:schematics": "jest --config schematics/jest.config.js",
     "prebuild": "rm -rf build/",
     "deploy": "yarn build && npm publish build"
   },
@@ -35,27 +37,29 @@
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.20"
   },
+  "dependencies": {
+    "semver": "^5.5.1"
+  },
   "devDependencies": {
-    "@angular-devkit/core": "^0.7.5",
-    "@angular-devkit/schematics": "^0.7.5",
+    "@angular-devkit/core": "0.7.5",
+    "@angular-devkit/schematics": "0.7.5",
     "@angular/common": "6.1.4",
     "@angular/compiler": "6.1.4",
     "@angular/compiler-cli": "6.1.4",
     "@angular/core": "6.1.4",
     "@angular/platform-browser": "6.1.4",
     "@angular/platform-browser-dynamic": "6.1.4",
-    "@schematics/angular": "^0.7.5",
+    "@schematics/angular": "0.7.5",
     "@types/graphql": "0.13.4",
-    "@types/jasmine": "^2.8.8",
     "@types/jest": "23.3.1",
-    "@types/node": "^10.9.3",
+    "@types/node": "10.9.3",
+    "@types/semver": "5.5.0",
     "apollo-cache-inmemory": "1.2.9",
     "apollo-client": "2.4.1",
     "apollo-link": "1.2.2",
+    "cpx": "1.5.0",
     "graphql": "0.13.2",
     "graphql-tag": "2.9.2",
-    "jasmine": "^3.2.0",
-    "jasmine-spec-reporter": "^4.2.1",
     "jest": "23.5.0",
     "jest-zone-patch": "0.0.8",
     "ng-packagr": "4.1.1",
@@ -64,5 +68,16 @@
     "typescript": "2.9.2",
     "zone.js": "0.8.26"
   },
-  "schematics": "./schematics/collection.json"
+  "schematics": "./schematics/collection.json",
+  "ng-update": {
+    "packageGroup": [
+      "apollo-angular",
+      "apollo-angular-link-http",
+      "apollo-link",
+      "apollo-client",
+      "apollo-cache-inmemory",
+      "graphql-tag",
+      "graphql"
+    ]
+  }
 }
