--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apollo-angular",
   "description": "Use your GraphQL data in your Angular app, with the Apollo Client",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "author": "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
   "sideEffects": false,
@@ -69,16 +69,5 @@
     "typescript": "2.9.2",
     "zone.js": "0.8.26"
   },
-  "schematics": "./schematics/collection.json",
-  "ng-update": {
-    "packageGroup": [
-      "apollo-angular",
-      "apollo-angular-link-http",
-      "apollo-link",
-      "apollo-client",
-      "apollo-cache-inmemory",
-      "graphql-tag",
-      "graphql"
-    ]
-  }
+  "schematics": "./schematics/collection.json"
 }
