--- a/packages/apollo-angular-link-http-batch/package.json
+++ b/packages/apollo-angular-link-http-batch/package.json
@@ -7,7 +7,7 @@
   "main": "build/bundles/ng.apolloLink.httpBatch.umd.js",
   "module": "build/fesm5/ng.apolloLink.httpBatch.js",
   "typings": "build/ng.apolloLink.httpBatch.d.ts",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "repository": {
     "type": "git",
     "url": "apollographql/apollo-angular"
@@ -26,7 +26,7 @@
   "peerDependencies": {
     "@angular/core": "^6.0.0",
     "@angular/common": "^6.0.0",
-    "graphql": "^0.11.3 || ^0.12.3 || ^0.13.0 || ^14.0.0"
+    "graphql": ">=0.11.0 <0.14.0 || ^14.0.0"
   },
   "dependencies": {
     "apollo-link": "^1.0.0",
