--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "lerna run test",
     "format": "prettier --config .prettierrc --write \"packages/**/*.ts\"",
     "deploy": "lerna run deploy",
+    "package": "./scripts/package.js",
     "coverage": "codecov",
     "precommit": "lint-staged",
     "commitmsg": "commitlint -e"
@@ -21,6 +22,7 @@
     "@commitlint/config-angular": "7.1.2",
     "@types/jest": "23.3.2",
     "codecov": "3.1.0",
+    "commander": "2.18.0",
     "husky": "1.1.0",
     "jest": "23.6.0",
     "lerna": "3.4.0",
