--- a/packages/apollo-angular-link-http-common/package.json
+++ b/packages/apollo-angular-link-http-common/package.json
@@ -21,7 +21,8 @@
     "build": "ng-packagr -p ng-package.js",
     "test": "yarn test-only",
     "test-only": "exit 0",
-    "deploy": "yarn build && npm publish build"
+    "predeploy": "yarn build",
+    "deploy": "npm publish build"
   },
   "peerDependencies": {
     "@angular/core": "^6.0.0",
