--- a/packages/apollo-angular-link-persisted/package.json
+++ b/packages/apollo-angular-link-persisted/package.json
@@ -21,7 +21,8 @@
     "build": "ng-packagr -p ng-package.js",
     "test": "yarn test-only",
     "test-only": "jest --config jest.config.js",
-    "deploy": "yarn build && npm publish build"
+    "predeploy": "yarn build",
+    "deploy": "npm publish build"
   },
   "peerDependencies": {
     "apollo-link": "^1.0.0"
