--- a/packages/apollo-angular-cache-ngrx/package.json
+++ b/packages/apollo-angular-cache-ngrx/package.json
@@ -24,19 +24,19 @@
     "deploy": "yarn build && npm publish build"
   },
   "peerDependencies": {
-    "@angular/core": "^6.0.0-rc.0",
-    "@ngrx/store": "^6.0.0-beta.1",
-    "rxjs": "^6.0.0-rc.0"
+    "@angular/core": "^6.0.0 || ^7.0.0-rc.0",
+    "@ngrx/store": "^6.0.0 || ^7.0.0-rc.0",
+    "rxjs": "^6.0.0"
   },
   "devDependencies": {
-    "@angular/animations": "6.1.9",
-    "@angular/common": "6.1.9",
-    "@angular/compiler": "6.1.9",
-    "@angular/compiler-cli": "6.1.9",
-    "@angular/core": "6.1.9",
-    "@angular/http": "6.1.9",
-    "@angular/platform-browser": "6.1.9",
-    "@angular/platform-browser-dynamic": "6.1.9",
+    "@angular/animations": "7.0.0-rc.0",
+    "@angular/common": "7.0.0-rc.0",
+    "@angular/compiler": "7.0.0-rc.0",
+    "@angular/compiler-cli": "7.0.0-rc.0",
+    "@angular/core": "7.0.0-rc.0",
+    "@angular/http": "7.0.0-rc.0",
+    "@angular/platform-browser": "7.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "7.0.0-rc.0",
     "@ngrx/store": "6.1.0",
     "@types/graphql": "14.0.1",
     "@types/jest": "23.3.2",
@@ -47,7 +47,7 @@
     "ng-packagr": "4.2.0",
     "rxjs": "6.3.3",
     "ts-jest": "23.10.2",
-    "typescript": "2.9.2",
+    "typescript": "3.1.1",
     "zone.js": "0.8.26"
   },
   "dependencies": {
