--- a/packages/apollo-angular-link-http/package.json
+++ b/packages/apollo-angular-link-http/package.json
@@ -24,8 +24,8 @@
     "deploy": "yarn build && npm publish build"
   },
   "peerDependencies": {
-    "@angular/core": "^6.0.0",
-    "@angular/common": "^6.0.0",
+    "@angular/core": "^6.0.0 || ^7.0.0-rc.0",
+    "@angular/common": "^6.0.0 || ^7.0.0-rc.0",
     "apollo-link": "^1.0.0",
     "graphql": ">=0.11.0 <0.14.0 || ^14.0.0"
   },
@@ -33,15 +33,15 @@
     "apollo-angular-link-http-common": "~1.3.0"
   },
   "devDependencies": {
-    "@angular/animations": "6.1.9",
-    "@angular/common": "6.1.9",
-    "@angular/compiler": "6.1.9",
-    "@angular/compiler-cli": "6.1.9",
-    "@angular/core": "6.1.9",
-    "@angular/http": "6.1.9",
-    "@angular/platform-browser": "6.1.9",
-    "@angular/platform-browser-dynamic": "6.1.9",
-    "@angular/platform-server": "6.1.9",
+    "@angular/animations": "7.0.0-rc.0",
+    "@angular/common": "7.0.0-rc.0",
+    "@angular/compiler": "7.0.0-rc.0",
+    "@angular/compiler-cli": "7.0.0-rc.0",
+    "@angular/core": "7.0.0-rc.0",
+    "@angular/http": "7.0.0-rc.0",
+    "@angular/platform-browser": "7.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "7.0.0-rc.0",
+    "@angular/platform-server": "7.0.0-rc.0",
     "@types/graphql": "14.0.1",
     "@types/jest": "23.3.2",
     "apollo-angular": "1.4.0",
@@ -55,7 +55,7 @@
     "ng-packagr": "4.2.0",
     "rxjs": "6.3.3",
     "ts-jest": "23.10.2",
-    "typescript": "2.9.2",
+    "typescript": "3.1.1",
     "zone.js": "0.8.26"
   }
 }
