--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -32,7 +32,7 @@
     "deploy": "yarn build && npm publish build"
   },
   "peerDependencies": {
-    "@angular/core": "^6.1.0",
+    "@angular/core": "^6.1.0 || ^7.0.0-rc.0",
     "apollo-client": "^2.3.4",
     "apollo-link": "^1.0.0",
     "rxjs": "^6.0.0",
@@ -42,15 +42,15 @@
     "semver": "^5.5.1"
   },
   "devDependencies": {
-    "@angular-devkit/core": "0.8.4",
-    "@angular-devkit/schematics": "0.8.4",
-    "@angular/common": "6.1.9",
-    "@angular/compiler": "6.1.9",
-    "@angular/compiler-cli": "6.1.9",
-    "@angular/core": "6.1.9",
-    "@angular/platform-browser": "6.1.9",
-    "@angular/platform-browser-dynamic": "6.1.9",
-    "@schematics/angular": "0.8.4",
+    "@angular-devkit/core": "7.0.0-rc.0",
+    "@angular-devkit/schematics": "7.0.0-rc.1",
+    "@angular/common": "7.0.0-rc.0",
+    "@angular/compiler": "7.0.0-rc.0",
+    "@angular/compiler-cli": "7.0.0-rc.0",
+    "@angular/core": "7.0.0-rc.0",
+    "@angular/platform-browser": "7.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "7.0.0-rc.0",
+    "@schematics/angular": "7.0.0-rc.1",
     "@types/graphql": "14.0.1",
     "@types/jest": "23.3.2",
     "@types/node": "10.11.3",
@@ -66,7 +66,7 @@
     "ng-packagr": "4.2.0",
     "rxjs": "6.3.3",
     "ts-jest": "23.10.2",
-    "typescript": "2.9.2",
+    "typescript": "3.1.1",
     "zone.js": "0.8.26"
   },
   "schematics": "./schematics/collection.json"
