--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prettier": "1.14.3",
     "rimraf": "2.6.2",
     "shelljs": "0.8.2",
-    "typescript": "2.9.2"
+    "tsickle": "0.33.0",
+    "typescript": "3.1.3"
   }
 }
