--- a/packages/apollo-angular-boost/package.json
+++ b/packages/apollo-angular-boost/package.json
@@ -23,8 +23,8 @@
     "deploy": "yarn build && npm publish build"
   },
   "peerDependencies": {
-    "@angular/core": "^6.1.0",
-    "@angular/common": "^6.1.0"
+    "@angular/core": "^6.1.0 || ^7.0.0",
+    "@angular/common": "^6.1.0 || ^7.0.0"
   },
   "dependencies": {
     "apollo-cache-inmemory": "~1.3.0",
@@ -37,15 +37,15 @@
     "graphql-tag": "~2.10.0"
   },
   "devDependencies": {
-    "@angular/animations": "6.1.10",
-    "@angular/common": "6.1.10",
-    "@angular/compiler": "6.1.10",
-    "@angular/compiler-cli": "6.1.10",
-    "@angular/core": "6.1.10",
-    "@angular/http": "6.1.10",
-    "@angular/platform-browser": "6.1.10",
-    "@angular/platform-browser-dynamic": "6.1.10",
-    "@angular/platform-server": "6.1.10",
+    "@angular/animations": "7.0.0",
+    "@angular/common": "7.0.0",
+    "@angular/compiler": "7.0.0",
+    "@angular/compiler-cli": "7.0.0",
+    "@angular/core": "7.0.0",
+    "@angular/http": "7.0.0",
+    "@angular/platform-browser": "7.0.0",
+    "@angular/platform-browser-dynamic": "7.0.0",
+    "@angular/platform-server": "7.0.0",
     "@types/graphql": "14.0.3",
     "@types/jest": "23.3.5",
     "graphql": "14.0.2",
@@ -54,7 +54,7 @@
     "ng-packagr": "4.3.1",
     "rxjs": "6.3.3",
     "ts-jest": "23.10.4",
-    "typescript": "2.9.2",
+    "typescript": "3.1.3",
     "zone.js": "0.8.26"
   }
 }
