--- a/packages/apollo-angular-link-http-common/package.json
+++ b/packages/apollo-angular-link-http-common/package.json
@@ -7,7 +7,7 @@
   "main": "build/bundles/ng.apolloLink.httpCommon.umd.js",
   "module": "build/fesm5/ng.apolloLink.httpCommon.js",
   "typings": "build/ng.apolloLink.httpCommon.d.ts",
-  "version": "1.3.0",
+  "version": "1.4.0-rc.0",
   "repository": {
     "type": "git",
     "url": "apollographql/apollo-angular"
@@ -24,21 +24,21 @@
     "deploy": "yarn build && npm publish build"
   },
   "peerDependencies": {
-    "@angular/core": "^6.0.0",
-    "@angular/common": "^6.0.0",
+    "@angular/core": "^6.0.0 || ^7.0.0",
+    "@angular/common": "^6.0.0 || ^7.0.0",
     "apollo-link": "^1.0.0",
     "graphql": ">=0.11.0 <0.14.0 || ^14.0.0"
   },
   "devDependencies": {
-    "@angular/animations": "6.1.10",
-    "@angular/common": "6.1.10",
-    "@angular/compiler": "6.1.10",
-    "@angular/compiler-cli": "6.1.10",
-    "@angular/core": "6.1.10",
-    "@angular/http": "6.1.10",
-    "@angular/platform-browser": "6.1.10",
-    "@angular/platform-browser-dynamic": "6.1.10",
-    "@angular/platform-server": "6.1.10",
+    "@angular/animations": "7.0.0",
+    "@angular/common": "7.0.0",
+    "@angular/compiler": "7.0.0",
+    "@angular/compiler-cli": "7.0.0",
+    "@angular/core": "7.0.0",
+    "@angular/http": "7.0.0",
+    "@angular/platform-browser": "7.0.0",
+    "@angular/platform-browser-dynamic": "7.0.0",
+    "@angular/platform-server": "7.0.0",
     "@types/graphql": "14.0.3",
     "@types/jest": "23.3.5",
     "apollo-cache-inmemory": "1.3.5",
@@ -51,7 +51,7 @@
     "ng-packagr": "4.3.1",
     "rxjs": "6.3.3",
     "ts-jest": "23.10.4",
-    "typescript": "2.9.2",
+    "typescript": "3.1.3",
     "zone.js": "0.8.26"
   }
 }
