--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apollo-angular",
   "description": "Use your GraphQL data in your Angular app, with the Apollo Client",
-  "version": "1.5.0-rc.0",
+  "version": "1.5.0-rc.1",
   "author": "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
   "sideEffects": false,
@@ -32,7 +32,7 @@
     "deploy": "yarn build && npm publish build"
   },
   "peerDependencies": {
-    "@angular/core": "^6.1.0",
+    "@angular/core": "^6.1.0 || ^7.0.0",
     "apollo-client": "^2.3.4",
     "apollo-link": "^1.0.0",
     "rxjs": "^6.0.0",
@@ -42,15 +42,15 @@
     "semver": "^5.5.1"
   },
   "devDependencies": {
-    "@angular-devkit/core": "0.8.5",
-    "@angular-devkit/schematics": "0.8.5",
-    "@angular/common": "6.1.10",
-    "@angular/compiler": "6.1.10",
-    "@angular/compiler-cli": "6.1.10",
-    "@angular/core": "6.1.10",
-    "@angular/platform-browser": "6.1.10",
-    "@angular/platform-browser-dynamic": "6.1.10",
-    "@schematics/angular": "0.8.5",
+    "@angular-devkit/core": "7.0.1",
+    "@angular-devkit/schematics": "7.0.1",
+    "@angular/common": "7.0.0",
+    "@angular/compiler": "7.0.0",
+    "@angular/compiler-cli": "7.0.0",
+    "@angular/core": "7.0.0",
+    "@angular/platform-browser": "7.0.0",
+    "@angular/platform-browser-dynamic": "7.0.0",
+    "@schematics/angular": "7.0.1",
     "@types/graphql": "14.0.3",
     "@types/jest": "23.3.5",
     "@types/node": "10.12.0",
@@ -66,7 +66,7 @@
     "ng-packagr": "4.3.1",
     "rxjs": "6.3.3",
     "ts-jest": "23.10.4",
-    "typescript": "2.9.2",
+    "typescript": "3.1.3",
     "zone.js": "0.8.26"
   },
   "schematics": "./schematics/collection.json"
