--- a/package.json
+++ b/package.json
@@ -10,15 +10,12 @@
     "format": "prettier --config .prettierrc --write \"packages/**/*.ts\"",
     "deploy": "lerna run deploy",
     "coverage": "codecov",
-    "precommit": "lint-staged",
-    "commitmsg": "commitlint -e"
+    "precommit": "lint-staged"
   },
   "workspaces": [
     "packages/*"
   ],
   "devDependencies": {
-    "@commitlint/cli": "7.3.2",
-    "@commitlint/config-angular": "7.3.1",
     "@types/jest": "23.3.13",
     "codecov": "3.1.0",
     "husky": "1.3.1",
@@ -29,6 +26,6 @@
     "rimraf": "2.6.3",
     "shelljs": "0.8.3",
     "tsickle": "0.34.0",
-    "typescript": "3.1.6"
+    "typescript": "3.2.4"
   }
 }
