--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,36 +1,36 @@
 version: 2.1
 
 executors:
-  main-executor:
+  default:
     docker:
       - image: circleci/node:10
     working_directory: ~/project
 
 jobs:
   install-and-build:
-    executor: main-executor
+    executor: default
     steps:
       - checkout
       - run:
-          name: Install Dependencies
-          command: yarn install
+        name: Install Dependencies
+        command: yarn install
       - run:
-          name: Build packages
-          command: yarn build
+        name: Build packages
+        command: yarn build
       - persist_to_workspace:
-          root: .
-          paths: .
+        root: .
+        paths: .
   test:
-    executor: main-executor
+    executor: default
     steps:
       - attach_workspace:
-          at: ~/project
+        at: ~/project
       - run:
-          name: Test packages
-          command: yarn test
+        name: Test packages
+        command: yarn test
       - run:
-          name: Send Code Coverage
-          command: yarn coverage
+        name: Send Code Coverage
+        command: yarn coverage
 workflows:
   version: 2.1
 
@@ -38,5 +38,5 @@ workflows:
     jobs:
       - install-and-build
       - test:
-          requires:
-            - install-and-build
+        requires:
+          - install-and-build
