--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "precommit": "lint-staged"
   },
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "bundle-test"
   ],
   "devDependencies": {
     "@types/jest": "24.0.14",
