--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -5,9 +5,9 @@
   "author": "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
   "sideEffects": false,
-  "main": "build/bundles/ng.apollo.umd.js",
-  "module": "build/fesm5/ng.apollo.js",
-  "typings": "build/ng.apollo.d.ts",
+  "main": "build/bundles/ngApollo.umd.js",
+  "module": "build/fesm5/ngApollo.js",
+  "typings": "build/ngApollo.d.ts",
   "homepage": "https://www.apollographql.com/docs/angular/",
   "repository": {
     "type": "git",
