--- a/packages/apollo-angular-link-http-batch/package.json
+++ b/packages/apollo-angular-link-http-batch/package.json
@@ -24,14 +24,14 @@
     "deploy": "yarn build && npm publish build"
   },
   "peerDependencies": {
-    "@angular/core": "^6.0.0 || ^7.0.0 || ^8.0.0",
     "@angular/common": "^6.0.0 || ^7.0.0 || ^8.0.0",
+    "@angular/core": "^6.0.0 || ^7.0.0 || ^8.0.0",
     "graphql": ">=0.11.0 <0.14.0 || ^14.0.0"
   },
   "dependencies": {
+    "apollo-angular-link-http-common": "~1.8.0",
     "apollo-link": "^1.0.0",
-    "apollo-link-batch": "^1.1.2",
-    "apollo-angular-link-http-common": "~1.8.0"
+    "apollo-link-batch": "^1.1.2"
   },
   "devDependencies": {
     "@angular/animations": "8.2.7",
@@ -46,13 +46,13 @@
     "@types/jest": "24.0.18",
     "apollo-cache-inmemory": "1.6.3",
     "apollo-client": "2.6.4",
-    "graphql": "14.5.4",
+    "graphql": "14.5.6",
     "graphql-tag": "2.10.1",
     "jest": "24.9.0",
     "jest-zone-patch": "0.0.10",
     "ng-packagr": "5.5.1",
     "rxjs": "6.5.3",
-    "ts-jest": "24.0.2",
+    "ts-jest": "24.1.0",
     "typescript": "3.5.3",
     "zone.js": "0.10.2"
   }
