--- a/packages/apollo-angular-link-http-batch/package.json
+++ b/packages/apollo-angular-link-http-batch/package.json
@@ -8,10 +8,7 @@
   "module": "build/fesm5/ngApolloLinkHttpBatch.js",
   "typings": "build/ngApolloLinkHttpBatch.d.ts",
   "version": "1.7.0",
-  "repository": {
-    "type": "git",
-    "url": "apollographql/apollo-angular"
-  },
+  "repository": "https://github.com/apollographql/apollo-angular/tree/master/packages/apollo-angular-link-http-batch",
   "keywords": [
     "apollo",
     "graphql",
