--- a/packages/apollo-angular-link-http/package.json
+++ b/packages/apollo-angular-link-http/package.json
@@ -8,10 +8,7 @@
   "module": "build/fesm5/ngApolloLinkHttp.js",
   "typings": "build/ngApolloLinkHttp.d.ts",
   "version": "1.8.0",
-  "repository": {
-    "type": "git",
-    "url": "apollographql/apollo-angular"
-  },
+  "repository": "https://github.com/apollographql/apollo-angular/tree/master/packages/apollo-angular-link-http",
   "keywords": [
     "apollo",
     "graphql",
