Clean up monorepo (#1343)

--- a/packages/apollo-angular-link-headers/package.json
+++ b/packages/apollo-angular-link-headers/package.json
@@ -8,10 +8,7 @@
   "module": "build/fesm5/ngApolloLinkHeaders.js",
   "typings": "build/ngApolloLinkHeaders.d.ts",
   "version": "1.4.0",
-  "repository": {
-    "type": "git",
-    "url": "apollographql/apollo-angular"
-  },
+  "repository": "https://github.com/apollographql/apollo-angular/tree/master/packages/apollo-angular-link-headers",
   "keywords": [
     "apollo",
     "graphql",
